name:           yaml-examples
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         cerdep

executable yaml-example
  hs-source-dirs:  src
  main-is:         YamlExample.hs
  build-depends:   base >= 4
  ghc-options:     -Wall

executable syck-example
  hs-source-dirs:  src
  main-is:         SyckYamlExample.hs
  build-depends:   base >= 4
  ghc-options:     -Wall

executable yaml-light-example
  hs-source-dirs:  src
  main-is:         YamlLightExample.hs
  build-depends:   base >= 4
  ghc-options:     -Wall

library 
  build-depends:   
                   base >= 4,
                   yaml,
                   bytestring,
                   aeson,
                   text,
                   HsSyck,
                   yaml-light
  hs-source-dirs:  src
  ghc-options:     -Wall

