name:           yaml-examples
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         cerdep

executable yaml-example
  hs-source-dirs:  src
  main-is:         YamlExample.hs
  build-depends:   base >= 4
  ghc-options:     -Wall


library 
  build-depends:   
                   base >= 4,
                   yaml >= 0.8.5.1,
                   bytestring,
                   aeson,
                   text
  hs-source-dirs:  src
  ghc-options:     -Wall

